Improve telemetry (#220)