@@ -5,11 +5,12 @@ import com.konfigyr.security.AuthenticatedPrincipal;
 import com.konfigyr.vault.*;
 import com.konfigyr.vault.Properties;
 import com.konfigyr.vault.state.RepositoryStateException;
+import io.micrometer.observation.Observation;
+import io.micrometer.observation.ObservationRegistry;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.jspecify.annotations.NullMarked;
 import org.springframework.util.CollectionUtils;
-import org.springframework.util.StringUtils;
 
 import java.nio.charset.StandardCharsets;
 import java.util.*;
@@ -22,6 +23,7 @@ public class ConfigurationEnvironmentLocator {
 	private final VaultAccessor vaultAccessor;
 	private final ProfileManager profileManager;
 	private final ConfigurationCache configurationCache;
+	private final ObservationRegistry observationRegistry;
 
 	public ConfigurationEnvironment locate(AuthenticatedPrincipal principal, Service service, String profile) {
 		return locate(principal, service, Collections.singleton(profile));
@@ -33,25 +35,34 @@ public class ConfigurationEnvironmentLocator {
 
 	public ConfigurationEnvironment locate(AuthenticatedPrincipal principal, Service service, Collection<String> profileNames) {
 		if (CollectionUtils.isEmpty(profileNames)) {
-			return new ConfigurationEnvironment(service.slug(), List.of(), List.of());
+			return new ConfigurationEnvironment(service.slug(), Collections.emptyList(), Collections.emptyList());
 		}
 
-		final List<PropertySource> properties = new ArrayList<>(profileNames.size());
+		final Observation observation = ConfigurationEnvironmentObservation.create(observationRegistry, service);
 
-		for (String profileName : profileNames) {
-			profileManager.get(service, profileName).map(profile -> createPropertySource(
-					principal, service, profile)
-			).ifPresentOrElse(properties::add, () -> log.warn(
-					"Profile '{}' not found for service '{}'", profileName, service.slug()
-			));
-		}
+		return observation.observe(() -> {
+			final List<PropertySource> properties = new ArrayList<>(profileNames.size());
 
-		if (log.isDebugEnabled()) {
-			log.debug("Successfully located configuration environment for '{}' service and {} profiles: {}",
-					service, StringUtils.collectionToCommaDelimitedString(profileNames), properties);
-		}
+			for (String profileName : profileNames) {
+				profileManager.get(service, profileName).map(profile -> {
+					final PropertySource source = createPropertySource(principal, service, profile);
+					observation.event(ConfigurationEnvironmentObservation.located(profileName));
 
-		return new ConfigurationEnvironment(service.slug(), List.copyOf(profileNames), properties);
+					if (log.isDebugEnabled()) {
+						log.debug("Successfully located configuration environment for '{}' service and {} profile: {}",
+								service.id(), profileName, source);
+					}
+
+					return source;
+				}).ifPresentOrElse(properties::add, () -> {
+					log.warn("Profile '{}' not found for service '{}'", profileName, service.id());
+
+					observation.event(ConfigurationEnvironmentObservation.missing(profileName));
+				});
+			}
+
+			return new ConfigurationEnvironment(service.slug(), List.copyOf(profileNames), properties);
+		});
 	}
 
 	private PropertySource createPropertySource(AuthenticatedPrincipal principal, Service service, Profile profile) {
